--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -152,5 +152,7 @@
   "mn21:14.2": "e dice:",
   "mn21:14.3": "‘Adesso faccio dei dipinti nel cielo, faccio in modo che dei dipinti appaiano lì.’",
   "mn21:14.4": "Cosa ne pensate, mendicanti?",
-  "mn21:14.5": "Quella persona può fare dipinti nel cielo?”"
+  "mn21:14.5": "Quella persona può fare dipinti nel cielo?”",
+  "mn21:14.6": "“No, Signore.",
+  "mn21:14.7": "Perché questo?"
 }
