--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -154,5 +154,6 @@
   "mn21:14.4": "Cosa ne pensate, mendicanti?",
   "mn21:14.5": "Quella persona può fare dipinti nel cielo?”",
   "mn21:14.6": "“No, Signore.",
-  "mn21:14.7": "Perché questo?"
+  "mn21:14.7": "Perché questo?",
+  "mn21:14.8": "Perché il cielo non ha forma ed è invisibile."
 }
