--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -155,5 +155,6 @@
   "mn21:14.5": "Quella persona può fare dipinti nel cielo?”",
   "mn21:14.6": "“No, Signore.",
   "mn21:14.7": "Perché questo?",
-  "mn21:14.8": "Perché il cielo non ha forma ed è invisibile."
+  "mn21:14.8": "Perché il cielo non ha forma ed è invisibile.",
+  "mn21:14.9": "Non è facile fare dipinti lì."
 }
