--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -157,5 +157,6 @@
   "mn21:14.7": "Perché questo?",
   "mn21:14.8": "Perché il cielo non ha forma ed è invisibile.",
   "mn21:14.9": "Non è facile fare dipinti lì.",
-  "mn21:14.10": "Quella persona alla fine si stancherebbe e frustrerebbe.”"
+  "mn21:14.10": "Quella persona alla fine si stancherebbe e frustrerebbe.”",
+  "mn21:15.1": "Allo stesso modo, ci sono questi cinque modi in cui gli altri potrebbero criticarvi."
 }
