Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -160,5 +160,5 @@
   "mn21:14.10": "Quella persona alla fine si stancherebbe e frustrerebbe.”",
   "mn21:15.1": "Allo stesso modo, ci sono questi cinque modi in cui gli altri potrebbero criticarvi.",
   "mn21:16.1": "Immaginate una persona che arriva portando una torcia di fieno fiammante,",
-  "mn21:16.2": "e dice."
+  "mn21:16.2": "e dice:"
 }
