--- a/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn2_translation-lt-piyadassi.json
@@ -59,7 +59,7 @@
   "mn2:10.4": "kyla dar nekilusi nežinojimo yda, o kilusi nežinojimo yda auga;",
   "mn2:10.5": "Šie yra dalykai, į kuriuos jis nekreipia dėmesio, kur dėmesys yra nekreiptinas.",
   "mn2:10.6": "Ir kurie, vienuoliai, yra dalykai, į kuriuos jis kreipia dėmesį, kur dėmesys yra kreiptinas?",
-  "mn2:10.7": "Tie, vienuoliai, dalykai, į kuriuos kreipiant dėmesį, žmogui nekyla dar nekilusi geismo yda, o kilusios geismo ydos atsikratoma;",
+  "mn2:10.7": "Tie, vienuoliai, dalykai, į kuriuos kreipiant dėmesį, žmogui nekyla dar nekilusi geismo yda, o kilusios geismo ydõs atsikratoma;",
   "mn2:10.8": "nekyla dar nekilusi būties troškimo yda, o kilusios būties troškimo ydos atsikratoma;",
   "mn2:10.9": "nekyla dar nekilusi nežinojimo yda, o kilusios nežinojimo ydos atsikratoma;",
   "mn2:10.10": "Šie yra dalykai, į kuriuos jis kreipia dėmesį, kur dėmesys yra kreiptinas.",
