--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -160,5 +160,6 @@
   "mn21:14.10": "Quella persona alla fine si stancherebbe e frustrerebbe.”",
   "mn21:15.1": "Allo stesso modo, ci sono questi cinque modi in cui gli altri potrebbero criticarvi.",
   "mn21:16.1": "Immaginate una persona che arriva portando una torcia di fieno fiammante,",
-  "mn21:16.2": "e dice:"
+  "mn21:16.2": "e dice:",
+  "mn21:16.3": "‘Ora brucio e scotto il fiume Gange con questa torcia di fieno fiammante.’"
 }
