--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -165,5 +165,6 @@
   "mn21:16.4": "Cosa ne pensate, mendicanti?",
   "mn21:16.5": "Quella persona può bruciare e scottare il fiume Gange con una torcia di fieno fiammante?”",
   "mn21:16.6": "“No, Signore.",
-  "mn21:16.7": "Perché questo?"
+  "mn21:16.7": "Perché questo?",
+  "mn21:16.8": "Perché il fiume Gange è profondo e immensurabile."
 }
