--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -167,5 +167,6 @@
   "mn21:16.6": "“No, Signore.",
   "mn21:16.7": "Perché questo?",
   "mn21:16.8": "Perché il fiume Gange è profondo e immensurabile.",
-  "mn21:16.9": "Non è facile bruciarlo e scottarlo con una torcia di fieno fiammante."
+  "mn21:16.9": "Non è facile bruciarlo e scottarlo con una torcia di fieno fiammante.",
+  "mn21:16.10": "Quella persona alla fine si stancherebbe e frustrerebbe.”"
 }
