--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -168,5 +168,6 @@
   "mn21:16.7": "Perché questo?",
   "mn21:16.8": "Perché il fiume Gange è profondo e immensurabile.",
   "mn21:16.9": "Non è facile bruciarlo e scottarlo con una torcia di fieno fiammante.",
-  "mn21:16.10": "Quella persona alla fine si stancherebbe e frustrerebbe.”"
+  "mn21:16.10": "Quella persona alla fine si stancherebbe e frustrerebbe.”",
+  "mn21:17.1": "Allo stesso modo, ci sono questi cinque modi in cui gli altri potrebbero criticarvi."
 }
