Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -171,5 +171,6 @@
   "mn21:16.10": "Quella persona alla fine si stancherebbe e frustrerebbe.”",
   "mn21:17.1": "Allo stesso modo, ci sono questi cinque modi in cui gli altri potrebbero criticarvi.",
   "mn21:18.1": "Immaginate una borsa in pelle di gatto lucidata, ben lucidata, molto ben lucidata, morbida, setosa, senza fruscii e crepitii.",
-  "mn21:18.2": "Poi arriva una persona portando un bastoncino o una pietra,"
+  "mn21:18.2": "Poi arriva una persona portando un bastoncino o una pietra,",
+  "mn21:18.3": "e dice:"
 }
