--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -173,5 +173,6 @@
   "mn21:18.1": "Immaginate una borsa in pelle di gatto lucidata, ben lucidata, molto ben lucidata, morbida, setosa, senza fruscii e crepitii.",
   "mn21:18.2": "Poi arriva una persona portando un bastoncino o una pietra,",
   "mn21:18.3": "e dice:",
-  "mn21:18.4": "‘Ora faccio frusciare e crepitare questa borsa in pelle di gatto con questo bastoncino o pietra.’"
+  "mn21:18.4": "‘Ora faccio frusciare e crepitare questa borsa in pelle di gatto con questo bastoncino o pietra.’",
+  "mn21:18.5": "Cosa ne pensate, mendicanti?"
 }
