--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -176,5 +176,6 @@
   "mn21:18.4": "‘Ora faccio frusciare e crepitare questa borsa in pelle di gatto con questo bastoncino o pietra.’",
   "mn21:18.5": "Cosa ne pensate, mendicanti?",
   "mn21:18.6": "Quella persona può far frusciare e crepitare quella borsa in pelle di gatto con quel bastoncino o pietra?”",
-  "mn21:18.7": "“No, Signore."
+  "mn21:18.7": "“No, Signore.",
+  "mn21:18.8": "Perché questo?"
 }
