--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -179,5 +179,6 @@
   "mn21:18.7": "“No, Signore.",
   "mn21:18.8": "Perché questo?",
   "mn21:18.9": "Perché quella borsa in pelle di gatto è lucidata, ben lucidata, molto ben lucidata, morbida, setosa, senza fruscii e crepitii.",
-  "mn21:18.10": "Non è facile farla frusciare e crepitare con un bastoncino o una pietra."
+  "mn21:18.10": "Non è facile farla frusciare e crepitare con un bastoncino o una pietra.",
+  "mn21:18.11": "Quella persona alla fine si stancherebbe e frustrerebbe.”"
 }
