--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -181,5 +181,6 @@
   "mn21:18.9": "Perché quella borsa in pelle di gatto è lucidata, ben lucidata, molto ben lucidata, morbida, setosa, senza fruscii e crepitii.",
   "mn21:18.10": "Non è facile farla frusciare e crepitare con un bastoncino o una pietra.",
   "mn21:18.11": "Quella persona alla fine si stancherebbe e frustrerebbe.”",
-  "mn21:19.1": "Allo stesso modo, ci sono questi cinque modi in cui gli altri potrebbero criticarvi."
+  "mn21:19.1": "Allo stesso modo, ci sono questi cinque modi in cui gli altri potrebbero criticarvi.",
+  "mn21:19.2": "Il loro linguaggio potrà essere opportuno o inopportuno,"
 }
