--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -183,5 +183,7 @@
   "mn21:18.11": "Quella persona alla fine si stancherebbe e frustrerebbe.”",
   "mn21:19.1": "Allo stesso modo, ci sono questi cinque modi in cui gli altri potrebbero criticarvi.",
   "mn21:19.2": "Il loro linguaggio potrà essere opportuno o inopportuno,",
-  "mn21:19.3": "vero o falso,"
+  "mn21:19.3": "vero o falso,",
+  "mn21:19.4": "gentile o aspro,",
+  "mn21:19.5": "benefico o dannoso,"
 }
