Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -185,5 +185,6 @@
   "mn21:19.2": "Il loro linguaggio potrà essere opportuno o inopportuno,",
   "mn21:19.3": "vero o falso,",
   "mn21:19.4": "gentile o aspro,",
-  "mn21:19.5": "benefico o dannoso,"
+  "mn21:19.5": "benefico o dannoso,",
+  "mn21:19.6": "da una mente di benevolenza o da odio segreto."
 }
