Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -186,5 +186,6 @@
   "mn21:19.3": "vero o falso,",
   "mn21:19.4": "gentile o aspro,",
   "mn21:19.5": "benefico o dannoso,",
-  "mn21:19.6": "da una mente di benevolenza o da odio segreto."
+  "mn21:19.6": "da una mente di benevolenza o da odio segreto.",
+  "mn21:19.7": "Quando gli altri vi criticano, lo fanno in uno di questi cinque modi."
 }
