--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -189,5 +189,6 @@
   "mn21:19.6": "da una mente di benevolenza o da odio segreto.",
   "mn21:19.7": "Quando gli altri vi criticano, lo fanno in uno di questi cinque modi.",
   "mn21:19.12": "Se succede, dovete allenarvi così:",
-  "mn21:19.13": "‘Le nostre menti non saranno influenzate. Non useremo parole cattive. Rimarremo pieni di compassione, con mente di benevolenza e niente odio segreto."
+  "mn21:19.13": "‘Le nostre menti non saranno influenzate. Non useremo parole cattive. Rimarremo pieni di compassione, con mente di benevolenza e niente odio segreto.",
+  "mn21:19.14": "Mediteremo diffondendo una mente piena di benevolenza verso quella persona. E con lei come base, mediteremo diffondendo una mente come una borsa in pelle di gatto a chiunque al mondo—abbondante, espansiva, immensurabile, libera da inimicizia e cattiveria.’"
 }
