Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -191,5 +191,6 @@
   "mn21:19.12": "Se succede, dovete allenarvi così:",
   "mn21:19.13": "‘Le nostre menti non saranno influenzate. Non useremo parole cattive. Rimarremo pieni di compassione, con mente di benevolenza e niente odio segreto.",
   "mn21:19.14": "Mediteremo diffondendo una mente piena di benevolenza verso quella persona. E con lei come base, mediteremo diffondendo una mente come una borsa in pelle di gatto a chiunque al mondo—abbondante, espansiva, immensurabile, libera da inimicizia e cattiveria.’",
-  "mn21:19.15": "Dovete allenarvi così."
+  "mn21:19.15": "Dovete allenarvi così.",
+  "mn21:20.1": "Persino se dei vili banditi vi segassero via gli arti, chiunque abbia un pensiero malevolo a causa di ciò non seguirebbe le mie istruzioni."
 }
