Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -196,5 +196,6 @@
   "mn21:20.2": "Se succede, dovete allenarvi così:",
   "mn21:20.3": "‘Le nostre menti non saranno influenzate. Non useremo parole cattive. Rimarremo pieni di compassione, con mente di benevolenza e niente odio segreto.",
   "mn21:20.4": "Mediteremo diffondendo una mente piena di benevolenza verso quella persona. E con lei come base, mediteremo diffondendo una mente piena di benevolenza a chiunque al mondo—abbondante, espansiva, immensurabile, libera da inimicizia e cattiveria.’",
-  "mn21:20.5": "Dovete allenarvi così."
+  "mn21:20.5": "Dovete allenarvi così.",
+  "mn21:21.1": "Se riflettete frequentemente su questo consiglio—la similitudine della sega—"
 }
