--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -198,5 +198,6 @@
   "mn21:20.4": "Mediteremo diffondendo una mente piena di benevolenza verso quella persona. E con lei come base, mediteremo diffondendo una mente piena di benevolenza a chiunque al mondo—abbondante, espansiva, immensurabile, libera da inimicizia e cattiveria.’",
   "mn21:20.5": "Dovete allenarvi così.",
   "mn21:21.1": "Se riflettete frequentemente su questo consiglio—la similitudine della sega—",
-  "mn21:21.2": "vedete qualche critica, grande o piccola, che potreste non sopportare?”"
+  "mn21:21.2": "vedete qualche critica, grande o piccola, che potreste non sopportare?”",
+  "mn21:21.3": "“No, Signore.”"
 }
