Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -199,5 +199,6 @@
   "mn21:20.5": "Dovete allenarvi così.",
   "mn21:21.1": "Se riflettete frequentemente su questo consiglio—la similitudine della sega—",
   "mn21:21.2": "vedete qualche critica, grande o piccola, che potreste non sopportare?”",
-  "mn21:21.3": "“No, Signore.”"
+  "mn21:21.3": "“No, Signore.”",
+  "mn21:21.4": "“Quindi, mendicanti, dovete riflettere frequentemente su questo consiglio, la similitudine della sega."
 }
