--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -201,5 +201,5 @@
   "mn21:21.2": "vedete qualche critica, grande o piccola, che potreste non sopportare?”",
   "mn21:21.3": "“No, Signore.”",
   "mn21:21.4": "“Quindi, mendicanti, dovete riflettere frequentemente su questo consiglio, la similitudine della sega.",
-  "mn21:21.5": "Questo sarà per il vostro benessere e gioia a lungo."
+  "mn21:21.5": "Questo sarà per il vostro benessere e gioia a lungo.”"
 }
