--- a/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn21_translation-it-giovannizappa.json
@@ -202,5 +202,6 @@
   "mn21:21.3": "“No, Signore.”",
   "mn21:21.4": "“Quindi, mendicanti, dovete riflettere frequentemente su questo consiglio, la similitudine della sega.",
   "mn21:21.5": "Questo sarà per il vostro benessere e gioia a lungo.”",
-  "mn21:21.6": "Questo è ciò che il Buddha disse."
+  "mn21:21.6": "Questo è ciò che il Buddha disse.",
+  "mn21:21.7": "Soddisfatti, i mendicanti furono contenti di ciò che il Buddha disse."
 }
