Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json
@@ -11,7 +11,7 @@
   "an10.177:2.5": "Kommt sie ihnen wirklich zugute?“ ",
   "an10.177:2.6": "„Unter den richtigen Umständen hilft sie ihnen, aber nicht unter den falschen Umständen.“ ",
   "an10.177:3.1": "„Was sind dann aber die richtigen und die falschen Umstände, Meister Gotama?“ ",
-  "an10.177:3.2": "„Brahmane, da tötet jemand lebende Geschöpfe, stiehlt und begeht sexuelle Verfehlungen. Er gebraucht falsche, entzweiende, harte oder sinnlose Rede. Und er ist begehrlich und böswillig und hat falsche Ansicht. ",
+  "an10.177:3.2": "„Brahmane, da tötet jemand lebende Geschöpfe, stiehlt und begeht sexuelle Verfehlungen. Er gebraucht falsche oder entzweiende Rede oder redet Unsinn. Und er ist begehrlich und böswillig und hat falsche Ansicht. ",
   "an10.177:3.3": "Wenn sein Körper auseinanderbricht, nach dem Tod, wird er in der Hölle wiedergeboren. ",
   "an10.177:3.4": "Dort überlebt er, indem er die Nahrung der Höllenwesen zu sich nimmt. ",
   "an10.177:3.5": "Das sind die falschen Umstände, sodass diese Spende dem Wesen, das hier lebt, nicht hilft. ",
