Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json
@@ -19,7 +19,7 @@
   "an10.177:4.2": "Wenn sein Körper auseinanderbricht, nach dem Tod, wird er im Tierreich wiedergeboren. ",
   "an10.177:4.3": "Dort überlebt er, indem er die Nahrung der Wesen im Tierreich zu sich nimmt. ",
   "an10.177:4.4": "Auch das sind die falschen Umstände, sodass diese Spende dem Wesen, das hier lebt, nicht hilft. ",
-  "an10.177:5.1": "Jemand anders unterlässt das Töten lebender Geschöpfe, das Stehlen und sexuelle Verfehlungen. Er unterlässt falsche, entzweiende, harte und sinnlose Rede. Und er ist zufrieden und gütig und hat rechte Ansicht. ",
+  "an10.177:5.1": "Jemand anders tötet keine lebenden Geschöpfe, stiehlt nicht und begeht keine sexuellen Verfehlungen. Er gebraucht keine falsche oder entzweiende Rede und redet keinen Unsinn. Und er ist zufrieden und gütig und hat rechte Ansicht. ",
   "an10.177:5.2": "Wenn sein Körper auseinanderbricht, nach dem Tod, wird er in der Menschenwelt wiedergeboren. ",
   "an10.177:5.3": "Dort überlebt er, indem er menschliche Nahrung zu sich nimmt. ",
   "an10.177:5.4": "Auch das sind die falschen Umstände, sodass diese Spende dem Wesen, das hier lebt, nicht hilft. ",
