Translations by sabbamitta to translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json
@@ -38,7 +38,7 @@
   "an10.177:9.3": "Es ist nie fruchtlos für den Spender.“ ",
   "an10.177:10.1": "„Empfiehlt Meister Gotama das selbst unter den falschen Umständen?“ ",
   "an10.177:10.2": "„Ich empfehle das selbst unter den falschen Umständen. ",
-  "an10.177:10.3": "Nehmen wir jemanden, der lebende Geschöpfe tötet, stiehlt und sexuelle Verfehlungen begeht. Er gebraucht falsche, entzweiende, harte oder sinnlose Rede. Und er ist begehrlich und böswillig und hat falsche Ansicht. ",
+  "an10.177:10.3": "Nehmen wir jemanden, der lebende Geschöpfe tötet, stiehlt und sexuelle Verfehlungen begeht. Er gebraucht falsche oder entzweiende  Rede oder redet Unsinn. Und er ist begehrlich und böswillig und hat falsche Ansicht. ",
   "an10.177:10.4": "Er gibt Asketen oder Brahmanen Spenden wie Essen, Trinken, Kleidung und Transportmittel, Kränze, Parfüm und Make-up, ein Bett, ein Haus und Licht. ",
   "an10.177:10.5": "Wenn sein Körper auseinanderbricht, nach dem Tod, wird er unter Elefanten wiedergeboren. ",
   "an10.177:10.6": "Dort erhält er Essen und Trinken, Kränze und Schmuck verschiedener Art. ",
