--- a/translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an10/an10.177_translation-de-sabbamitta.json
@@ -52,7 +52,7 @@
   "an10.177:12.6": "Dort erhält er Essen und Trinken, Kränze und Schmuck verschiedener Art. ",
   "an10.177:13.1": "Da er in diesem Leben lebende Geschöpfe getötet hat … und falsche Ansicht hatte, wurde er unter Hunden wiedergeboren. ",
   "an10.177:13.2": "Da er Asketen oder Brahmanen Spenden … gegeben hat, erhält er Essen und Trinken, Kränze und Schmuck verschiedener Art. ",
-  "an10.177:14.1": "Nehmen wir jemand anders, der das Töten lebender Geschöpfe, das Stehlen sowie sexuelle Verfehlungen unterlässt. Er unterlässt falsche, entzweiende, harte oder sinnlose Rede. Und er ist zufrieden und gütig und hat rechte Ansicht. ",
+  "an10.177:14.1": "Nehmen wir jemand anders, der keine lebenden Geschöpfe tötet, nicht stiehlt und keine sexuellen Verfehlungen begeht. Er gebraucht keine falsche oder entzweiende Rede und redet keinen Unsinn. Und er ist zufrieden und gütig und hat rechte Ansicht. ",
   "an10.177:14.2": "Er gibt Asketen oder Brahmanen Spenden … ",
   "an10.177:14.3": "Wenn sein Körper auseinanderbricht, nach dem Tod, wird er in der Menschenwelt wiedergeboren. ",
   "an10.177:14.4": "Dort erhält er die fünf Arten menschlicher Sinnesreize. ",
