--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -606,5 +606,6 @@
   "dn34:2.1.158": "This teaching is for the uncomplicated, not for one who loves complication. These are the eight things that are to be encouraged.",
   "dn34:2.1.159": "What are the eight things that are to be understood fully?",
   "dn34:2.1.160": "The eight spheres of mastery—",
-  "dn34:2.1.161": "Percipient of form as singular internally, one sees both beautiful and ugly external forms as insignificant. And he has this perception—(XXXIS THIS A CORRECT TRANSLATION OF THE BAHUBHIHI \"evaṃsaññī\" AS \"has\"? AND CAN I TRANSLATE \"evaṃ\" as \"and ... this\"?XXX)"
+  "dn34:2.1.161": "Percipient of form as singular internally, one sees both beautiful and ugly external forms as insignificant. And he has this perception—(XXXIS THIS A CORRECT TRANSLATION OF THE BAHUBHIHI \"evaṃsaññī\" AS \"has\"? AND CAN I TRANSLATE \"evaṃ\" as \"and ... this\"?XXX)",
+  "dn34:2.1.162": "‘Having mastered those, I know and see.’"
 }
