--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -608,5 +608,6 @@
   "dn34:2.1.160": "The eight spheres of mastery—",
   "dn34:2.1.161": "Percipient of form as singular internally, one sees both beautiful and ugly external forms as insignificant. And he has this perception—(XXXIS THIS A CORRECT TRANSLATION OF THE BAHUBHIHI \"evaṃsaññī\" AS \"has\"? AND CAN I TRANSLATE \"evaṃ\" as \"and ... this\"?XXX)",
   "dn34:2.1.162": "‘Having mastered those, I know and see.’",
-  "dn34:2.1.163": "This is the first sphere of mastery."
+  "dn34:2.1.163": "This is the first sphere of mastery.",
+  "dn34:2.1.164": "Percipient of form as singular internally, one sees both beautiful and ugly external forms as boundless. And he has this perception—"
 }
