--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -610,5 +610,6 @@
   "dn34:2.1.162": "‘Having mastered those, I know and see.’",
   "dn34:2.1.163": "This is the first sphere of mastery.",
   "dn34:2.1.164": "Percipient of form as singular internally, one sees both beautiful and ugly external forms as boundless. And he has this perception—",
-  "dn34:2.1.165": "‘Having mastered those, I know and see.’"
+  "dn34:2.1.165": "‘Having mastered those, I know and see.’",
+  "dn34:2.1.166": "This is the second sphere of mastery."
 }
