Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -616,5 +616,6 @@
   "dn34:2.1.168": "‘Having mastered those, I know and see.’",
   "dn34:2.1.169": "This is the third sphere of mastery.",
   "dn34:2.1.170": "Percipient of the formless as singular internally, one sees both beautiful and ugly external forms as boundless. And he has this perception—",
-  "dn34:2.1.171": "‘Having mastered those, I know and see.’"
+  "dn34:2.1.171": "‘Having mastered those, I know and see.’",
+  "dn34:2.1.172": "This is the fourth sphere of mastery."
 }
