--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -617,5 +617,6 @@
   "dn34:2.1.169": "This is the third sphere of mastery.",
   "dn34:2.1.170": "Percipient of the formless as singular internally, one sees both beautiful and ugly external forms as boundless. And he has this perception—",
   "dn34:2.1.171": "‘Having mastered those, I know and see.’",
-  "dn34:2.1.172": "This is the fourth sphere of mastery."
+  "dn34:2.1.172": "This is the fourth sphere of mastery.",
+  "dn34:2.1.173": "Percipient of the formless as singular internally, one sees external forms as blue, blue colored, blue in characteristics, blue in shine."
 }
