--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -619,5 +619,6 @@
   "dn34:2.1.171": "‘Having mastered those, I know and see.’",
   "dn34:2.1.172": "This is the fourth sphere of mastery.",
   "dn34:2.1.173": "Percipient of the formless as singular internally, one sees external forms as blue, blue colored, blue in characteristics, blue in shine.",
-  "dn34:2.1.174": "Just as a flax flower is blue, blue colored, blue in characteristics, blue in shine; or just as fabric from Varanasi that is polished on both sides is blue, blue colored, blue in characteristics, blue in shine—"
+  "dn34:2.1.174": "Just as a flax flower is blue, blue colored, blue in characteristics, blue in shine; or just as fabric from Varanasi that is polished on both sides is blue, blue colored, blue in characteristics, blue in shine—",
+  "dn34:2.1.175": "in the same way, one is percipient of the formless as singular internally, and sees external forms as blue, blue colored, blue in characteristics, blue in shine."
 }
