--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -13,5 +13,6 @@
   "mn1:2.4": "भगवंतने एैसा कहा:",
   "mn1:3.1": "अभि, भिक्षुओ, अेक अज्ञानी सामान्य मनुष्य जो आर्योके दर्शनसे वंचित है, जिसने आर्योके धर्मको सुना नहि, जो आर्यधर्मसे अंजान है, जोे सज्जनोके दर्शनसे  वंचित है, जिसने सज्जनोके धर्मको सुना नहि, जो सज्जनोके धर्मसे अंजान है—",
   "mn1:3.2": "वह पृथ्वीको पृथ्वी समझता है;",
-  "mn1:3.3": "पृथ्वीको पृथ्वी समझकर खु़दको पृथ्वी मानता है, खु़दको पृथ्वीमे मानता है, खु़दको पृथ्वीसे अलग मानता है, पृथ्वी मेरी है ऍसा मानता है, पृथ्वीमे आनंद लेता है। "
+  "mn1:3.3": "पृथ्वीको पृथ्वी समझकर खु़दको पृथ्वी मानता है, खु़दको पृथ्वीमे मानता है, खु़दको पृथ्वीसे अलग मानता है, पृथ्वी मेरी है ऍसा मानता है, पृथ्वीमे आनंद लेता है। ",
+  "mn1:3.4": "एैसा किस लिये?"
 }
