Translations by trush23 to translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json

--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -15,5 +15,6 @@
   "mn1:3.2": "वह पृथ्वीको पृथ्वी समझता है;",
   "mn1:3.3": "पृथ्वीको पृथ्वी समझकर खु़दको पृथ्वी मानता है, खु़दको पृथ्वीमे मानता है, खु़दको पृथ्वीसे अलग मानता है, पृथ्वी मेरी है ऍसा मानता है, पृथ्वीमे आनंद लेता है। ",
   "mn1:3.4": "एैसा किस लिये?",
-  "mn1:3.5": "‘उनको ठीकसे सामझा नहि’, केहता हुं।"
+  "mn1:3.5": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
+  "mn1:4.1": "वह पानीको पानी समझता है;"
 }
