Translations by trush23 to translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json

--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -16,5 +16,6 @@
   "mn1:3.3": "पृथ्वीको पृथ्वी समझकर खु़दको पृथ्वी मानता है, खु़दको पृथ्वीमे मानता है, खु़दको पृथ्वीसे अलग मानता है, पृथ्वी मेरी है ऍसा मानता है, पृथ्वीमे आनंद लेता है। ",
   "mn1:3.4": "एैसा किस लिये?",
   "mn1:3.5": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
-  "mn1:4.1": "वह पानीको पानी समझता है;"
+  "mn1:4.1": "वह पानीको पानी समझता है;",
+  "mn1:4.2": "पानीको पानी समझकर खु़दको पानी मानता है, खु़दको पानीमे मानता है, खु़दको पानीसे अलग मानता है, पानी मेरा है ऍसा मानता है, पानीमे आनंद लेता है।"
 }
