Translations by trush23 to translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json

--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -23,5 +23,6 @@
   "mn1:5.1": "वह अग्निको अग्नि समझता है;",
   "mn1:5.2": "अग्निको अग्नि समझकर खु़दको अग्नि मानता है, खु़दको अग्निमे मानता है, खु़दको अग्निसे अलग मानता है, अग्नि मेरी है ऍसा मानता है, अग्निमे आनंद लेता है।",
   "mn1:5.3": "एैसा किस लिये?",
-  "mn1:5.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।"
+  "mn1:5.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
+  "mn1:6.1": "वह वायुको वायु समझता है;"
 }
