--- a/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
+++ b/translation/hi/trush/sutta/mn/mn1_translation-hi-trush.json
@@ -24,5 +24,6 @@
   "mn1:5.2": "अग्निको अग्नि समझकर खु़दको अग्नि मानता है, खु़दको अग्निमे मानता है, खु़दको अग्निसे अलग मानता है, अग्नि मेरी है ऍसा मानता है, अग्निमे आनंद लेता है।",
   "mn1:5.3": "एैसा किस लिये?",
   "mn1:5.4": "‘उनको ठीकसे सामझा नहि’, केहता हुं।",
-  "mn1:6.1": "वह वायुको वायु समझता है;"
+  "mn1:6.1": "वह वायुको वायु समझता है;",
+  "mn1:6.2": "वायुको वायु समझकर खु़दको वायु मानता है, खु़दको वायुमे मानता है, खु़दको वायुसे अलग मानता है, वायु मेरा है ऍसा मानता है, वायुमे आनंद लेता है।"
 }
