Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -1,4 +1,5 @@
 {
   "mn22:0.1": "Discorsi Medi 22",
-  "mn22:0.2": "La Similitudine del Serprente"
+  "mn22:0.2": "La Similitudine del Serprente",
+  "mn22:1.1": "Così ho sentito."
 }
