--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -2,5 +2,6 @@
   "mn22:0.1": "Discorsi Medi 22",
   "mn22:0.2": "La Similitudine del Serprente",
   "mn22:1.1": "Così ho sentito.",
-  "mn22:1.2": "Una volta il Buddha si trovava vicino a Sāvatthī, nel bosco di Jeta, il monastero di Anāthapiṇḍika."
+  "mn22:1.2": "Una volta il Buddha si trovava vicino a Sāvatthī, nel bosco di Jeta, il monastero di Anāthapiṇḍika.",
+  "mn22:2.1": "In quell'occasione un mendicante di nome Ariṭtha, precedentemente un cacciatore di avvoltoi, manteneva la seguente idea sbagliata:"
 }
