--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -7,5 +7,6 @@
   "mn22:2.2": "“Per come capisco l'insegnamento del Buddha, gli atti che lui dice essere ostruzioni non sono veramente ostruzioni per colui che li compie.”",
   "mn22:2.3": "Vari mendicanti sentirono ciò.",
   "mn22:3.1": "Andarono da Ariṭtha e gli dissero:",
-  "mn22:3.2": "“È vero, Fratello Ariṭtha, che mantieni questa idea sbagliata:"
+  "mn22:3.2": "“È vero, Fratello Ariṭtha, che mantieni questa idea sbagliata:",
+  "mn22:3.3": "‘Per come capisco l'insegnamento del Buddha, gli atti che lui dice essere ostruzioni non sono veramente ostruzioni per colui che li compie.’?”"
 }
