--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -10,5 +10,5 @@
   "mn22:3.2": "“È vero, Fratello Ariṭtha, che mantieni questa idea sbagliata:",
   "mn22:3.3": "‘Per come capisco l'insegnamento del Buddha, gli atti che lui dice essere ostruzioni non sono veramente ostruzioni per colui che li compie.’?”",
   "mn22:3.4": "“Assolutamente, Fratelli. Per come capisco l'insegnamento del Buddha, gli atti che lui dice essere ostruzioni non sono veramente ostruzioni per colui che li compie.”",
-  "mn22:3.5": "Allora, volevo dissuadere Ariṭtha dalla sua opinione, i mendicanti lo perseguirono, pressarono, e spinsero,"
+  "mn22:3.5": "Allora, volevo dissuadere Ariṭtha dalla sua opinione, i mendicanti lo perseguirono, pressarono, e spinsero:"
 }
