--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -14,5 +14,6 @@
   "mn22:3.6": "“Non dire così, Ariṭtha! Non rappresentare male il Buddha, poiché rappresentare male il Buddha non è bene. E il Buddha non direbbe questo.",
   "mn22:3.7": "Il Buddha ha detto in molti modi che gli atti ostruttivi sono ostruttivi, e che ostruiscono veramente colui che li compie.",
   "mn22:3.8": "Il Buddha dice che i piaceri dei sensi danno poca gratificazione e molta sofferenza ed angoscia, e sono pieni di svantaggi.",
-  "mn22:3.9": "Con la similitudine dello scheletro …"
+  "mn22:3.9": "Con la similitudine dello scheletro …",
+  "mn22:3.10": "del pezzo di carne …"
 }
