--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -16,5 +16,6 @@
   "mn22:3.8": "Il Buddha dice che i piaceri dei sensi danno poca gratificazione e molta sofferenza ed angoscia, e sono pieni di svantaggi.",
   "mn22:3.9": "Con la similitudine dello scheletro …",
   "mn22:3.10": "del pezzo di carne …",
-  "mn22:3.11": "della torcia di paglia …"
+  "mn22:3.11": "della torcia di paglia …",
+  "mn22:3.12": "della fossa di braci ardenti …"
 }
