Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -17,5 +17,6 @@
   "mn22:3.9": "Con la similitudine dello scheletro …",
   "mn22:3.10": "del pezzo di carne …",
   "mn22:3.11": "della torcia di paglia …",
-  "mn22:3.12": "della fossa di braci ardenti …"
+  "mn22:3.12": "della fossa di braci ardenti …",
+  "mn22:3.13": "del sogno …"
 }
