Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -18,5 +18,6 @@
   "mn22:3.10": "del pezzo di carne …",
   "mn22:3.11": "della torcia di paglia …",
   "mn22:3.12": "della fossa di braci ardenti …",
-  "mn22:3.13": "del sogno …"
+  "mn22:3.13": "del sogno …",
+  "mn22:3.14": "dei beni in prestito …"
 }
