--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -20,5 +20,6 @@
   "mn22:3.12": "della fossa di braci ardenti …",
   "mn22:3.13": "del sogno …",
   "mn22:3.14": "dei beni in prestito …",
-  "mn22:3.15": "della frutta sull'albero …"
+  "mn22:3.15": "della frutta sull'albero …",
+  "mn22:3.16": "del coltello e tagliere del macellaio …"
 }
