--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -22,5 +22,6 @@
   "mn22:3.14": "dei beni in prestito …",
   "mn22:3.15": "della frutta sull'albero …",
   "mn22:3.16": "del coltello e tagliere del macellaio …",
-  "mn22:3.17": "della spada pungente …"
+  "mn22:3.17": "della spada pungente …",
+  "mn22:3.18": "della testa di serpente, il Buddha dice che i piaceri dei sensi danno poca gratificazione e molta sofferenza ed angoscia, e sono pieni di svantaggi."
 }
