--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -23,5 +23,6 @@
   "mn22:3.15": "della frutta sull'albero …",
   "mn22:3.16": "del coltello e tagliere del macellaio …",
   "mn22:3.17": "della spada pungente …",
-  "mn22:3.18": "della testa di serpente, il Buddha dice che i piaceri dei sensi danno poca gratificazione e molta sofferenza ed angoscia, e sono pieni di svantaggi."
+  "mn22:3.18": "della testa di serpente, il Buddha dice che i piaceri dei sensi danno poca gratificazione e molta sofferenza ed angoscia, e sono pieni di svantaggi.",
+  "mn22:3.19": "Ma anche se i mendicanti lo perseguirono, pressarono, e spinsero in questo modo, Ariṭtha manteneva ostinatamente la propria idea sbagliata e insisteva ad esprimerla."
 }
