--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -28,5 +28,6 @@
   "mn22:3.21": "Una volta che non riuscirono a dissuadere Arittha da tale opinione, i mendicanti andarono dal Buddha, si inchinarono, si sedettero a lato, e gli dissero ciò che era accaduto.",
   "mn22:5.1": "Allora il Buddha si rivolse ad un certo monaco:",
   "mn22:5.2": "“Per favore, monaco, in mio nome dì al mendicante Ariṭṭha, precedentemente un  cacciatore di avvolti, che",
-  "mn22:5.3": "il maestro lo convoca.”"
+  "mn22:5.3": "il maestro lo convoca.”",
+  "mn22:5.4": "“Sì, Signore,” rispose quel monaco. Andò da Ariṭṭha e gli disse:"
 }
