--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -29,5 +29,6 @@
   "mn22:5.1": "Allora il Buddha si rivolse ad un certo monaco:",
   "mn22:5.2": "“Per favore, monaco, in mio nome dì al mendicante Ariṭṭha, precedentemente un  cacciatore di avvolti, che",
   "mn22:5.3": "il maestro lo convoca.”",
-  "mn22:5.4": "“Sì, Signore,” rispose quel monaco. Andò da Ariṭṭha e gli disse:"
+  "mn22:5.4": "“Sì, Signore,” rispose quel monaco. Andò da Ariṭṭha e gli disse:",
+  "mn22:5.5": "“Fratello Ariṭṭha, il maestro ti convoca.”"
 }
