Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -30,5 +30,6 @@
   "mn22:5.2": "“Per favore, monaco, in mio nome dì al mendicante Ariṭṭha, precedentemente un  cacciatore di avvolti, che",
   "mn22:5.3": "il maestro lo convoca.”",
   "mn22:5.4": "“Sì, Signore,” rispose quel monaco. Andò da Ariṭṭha e gli disse:",
-  "mn22:5.5": "“Fratello Ariṭṭha, il maestro ti convoca.”"
+  "mn22:5.5": "“Fratello Ariṭṭha, il maestro ti convoca.”",
+  "mn22:5.6": "“Sì, Fratello,” rispose Ariṭṭha. Andò dal Buddha, si inchinò, e si sedette a lato. Il Buddha gli disse:"
 }
