--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -33,5 +33,5 @@
   "mn22:5.5": "“Fratello Ariṭṭha, il maestro ti convoca.”",
   "mn22:5.6": "“Sì, Fratello,” rispose Ariṭṭha. Andò dal Buddha, si inchinò, e si sedette a lato. Il Buddha gli disse:",
   "mn22:5.7": "“È vero, Ariṭtha, che mantieni questa idea sbagliata:",
-  "mn22:5.8": "‘Per come capisco l'insegnamento del Buddha, gli atti che lui dice essere ostruzioni non sono veramente ostruzioni per colui che li compie.’?”"
+  "mn22:5.8": "‘Per come capisco l'insegnamento del Buddha, gli atti che lui dice essere ostruzioni non sono veramente ostruzioni per colui che li compie’?”"
 }
