--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -36,5 +36,6 @@
   "mn22:5.8": "‘Per come capisco l'insegnamento del Buddha, gli atti che lui dice essere ostruzioni non sono veramente ostruzioni per colui che li compie’?”",
   "mn22:5.9": "“Assolutamente, Signore. Per come capisco l'insegnamento del Buddha, gli atti che lui dice essere ostruzioni non sono veramente ostruzioni per colui che li compie.”",
   "mn22:6.1": "“Sciocco, quando mai mi hai sentito insegnare in quel modo?",
-  "mn22:6.2": "Non h detto in molti modi che gli atti ostruttivi sono ostruttivi, e che ostruiscono veramente colui che li compie?"
+  "mn22:6.2": "Non h detto in molti modi che gli atti ostruttivi sono ostruttivi, e che ostruiscono veramente colui che li compie?",
+  "mn22:6.3": "Ho detto che i piaceri dei sensi danno poca gratificazione e molta sofferenza ed angoscia, e sono pieni di svantaggi."
 }
