Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -39,5 +39,6 @@
   "mn22:6.2": "Non h detto in molti modi che gli atti ostruttivi sono ostruttivi, e che ostruiscono veramente colui che li compie?",
   "mn22:6.3": "Ho detto che i piaceri dei sensi danno poca gratificazione e molta sofferenza ed angoscia, e sono pieni di svantaggi.",
   "mn22:6.4": "Con la similitudine dello scheletro …",
-  "mn22:6.5": "del pezzo di carne …"
+  "mn22:6.5": "del pezzo di carne …",
+  "mn22:6.6": "della torcia di paglia …"
 }
