Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -40,5 +40,6 @@
   "mn22:6.3": "Ho detto che i piaceri dei sensi danno poca gratificazione e molta sofferenza ed angoscia, e sono pieni di svantaggi.",
   "mn22:6.4": "Con la similitudine dello scheletro …",
   "mn22:6.5": "del pezzo di carne …",
-  "mn22:6.6": "della torcia di paglia …"
+  "mn22:6.6": "della torcia di paglia …",
+  "mn22:6.7": "della fossa di braci ardenti …"
 }
