Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -42,5 +42,6 @@
   "mn22:6.5": "del pezzo di carne …",
   "mn22:6.6": "della torcia di paglia …",
   "mn22:6.7": "della fossa di braci ardenti …",
-  "mn22:6.8": "del sogno …"
+  "mn22:6.8": "del sogno …",
+  "mn22:6.9": "dei beni in prestito …"
 }
