Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -43,5 +43,7 @@
   "mn22:6.6": "della torcia di paglia …",
   "mn22:6.7": "della fossa di braci ardenti …",
   "mn22:6.8": "del sogno …",
-  "mn22:6.9": "dei beni in prestito …"
+  "mn22:6.9": "dei beni in prestito …",
+  "mn22:6.10": "della frutta sull'albero …",
+  "mn22:6.11": "del coltello e tagliere del macellaio …"
 }
