Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -45,5 +45,6 @@
   "mn22:6.8": "del sogno …",
   "mn22:6.9": "dei beni in prestito …",
   "mn22:6.10": "della frutta sull'albero …",
-  "mn22:6.11": "del coltello e tagliere del macellaio …"
+  "mn22:6.11": "del coltello e tagliere del macellaio …",
+  "mn22:6.12": "della spada pungente …"
 }
