--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -51,5 +51,6 @@
   "mn22:6.14": "Ma comunque tu mi rappresenti male a causa della tua comprensione errata, crei danno a te stesso, e accumuli molto karma negativo.",
   "mn22:6.15": "Questo sarà a tuo danno e sofferenza a lungo.”",
   "mn22:7.1": "Poi il Buddha disse ai mendicanti:",
-  "mn22:7.2": "“Cosa ne pensate, mendicanti?"
+  "mn22:7.2": "“Cosa ne pensate, mendicanti?",
+  "mn22:7.3": "Questo mendicante Ariṭṭha ha acceso anche solo una scintilla di saggezza in questo insegnamento e addestramento?”"
 }
