Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -52,5 +52,6 @@
   "mn22:6.15": "Questo sarà a tuo danno e sofferenza a lungo.”",
   "mn22:7.1": "Poi il Buddha disse ai mendicanti:",
   "mn22:7.2": "“Cosa ne pensate, mendicanti?",
-  "mn22:7.3": "Questo mendicante Ariṭṭha ha acceso anche solo una scintilla di saggezza in questo insegnamento e addestramento?”"
+  "mn22:7.3": "Questo mendicante Ariṭṭha ha acceso anche solo una scintilla di saggezza in questo insegnamento e addestramento?”",
+  "mn22:7.4": "“Come potrebbe essere così, Signore?"
 }
