--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -53,5 +53,6 @@
   "mn22:7.1": "Poi il Buddha disse ai mendicanti:",
   "mn22:7.2": "“Cosa ne pensate, mendicanti?",
   "mn22:7.3": "Questo mendicante Ariṭṭha ha acceso anche solo una scintilla di saggezza in questo insegnamento e addestramento?”",
-  "mn22:7.4": "“Come potrebbe essere così, Signore?"
+  "mn22:7.4": "“Come potrebbe essere così, Signore?",
+  "mn22:7.5": "No, Signore.”"
 }
