--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -54,5 +54,6 @@
   "mn22:7.2": "“Cosa ne pensate, mendicanti?",
   "mn22:7.3": "Questo mendicante Ariṭṭha ha acceso anche solo una scintilla di saggezza in questo insegnamento e addestramento?”",
   "mn22:7.4": "“Come potrebbe essere così, Signore?",
-  "mn22:7.5": "No, Signore.”"
+  "mn22:7.5": "No, Signore.”",
+  "mn22:7.6": "Detto ciò, Ariṭṭha rimase seduto in silenzio, imbarazzato, con spalle cadenti, abbattuto, depresso, senza dire nulla."
 }
