Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -55,5 +55,6 @@
   "mn22:7.3": "Questo mendicante Ariṭṭha ha acceso anche solo una scintilla di saggezza in questo insegnamento e addestramento?”",
   "mn22:7.4": "“Come potrebbe essere così, Signore?",
   "mn22:7.5": "No, Signore.”",
-  "mn22:7.6": "Detto ciò, Ariṭṭha rimase seduto in silenzio, imbarazzato, con spalle cadenti, abbattuto, depresso, senza dire nulla."
+  "mn22:7.6": "Detto ciò, Ariṭṭha rimase seduto in silenzio, imbarazzato, con spalle cadenti, abbattuto, depresso, senza dire nulla.",
+  "mn22:7.7": "Vedendo ciò, il Buddha disse:"
 }
