Translations by gioz93 to translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json

--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -57,5 +57,6 @@
   "mn22:7.5": "No, Signore.”",
   "mn22:7.6": "Detto ciò, Ariṭṭha rimase seduto in silenzio, imbarazzato, con spalle cadenti, abbattuto, depresso, senza dire nulla.",
   "mn22:7.7": "Vedendo ciò, il Buddha disse:",
-  "mn22:7.8": "“Sciocco, sarai conosciuto per la tua idea dannosa."
+  "mn22:7.8": "“Sciocco, sarai conosciuto per la tua idea dannosa.",
+  "mn22:7.9": "Interrogherò i mendicati riguardo a questo.”"
 }
