--- a/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn22_translation-it-giovannizappa.json
@@ -59,5 +59,6 @@
   "mn22:7.7": "Vedendo ciò, il Buddha disse:",
   "mn22:7.8": "“Sciocco, sarai conosciuto per la tua idea dannosa.",
   "mn22:7.9": "Interrogherò i mendicati riguardo a questo.”",
-  "mn22:8.1": "Allora il Buddha disse ai mendicanti:"
+  "mn22:8.1": "Allora il Buddha disse ai mendicanti:",
+  "mn22:8.2": "“Mendicanti, voi capite il mio insegnamento come Ariṭṭha, che mi rappresenta male a causa della propria comprensione errata, crea danno a sé stesso, e accumula molto karma negativo?”"
 }
