Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -625,5 +625,6 @@
   "dn34:2.1.177": "Percipient of the formless as singular internally, one sees external forms as yellow, yellow colored, yellow in characteristics, yellow in shine.",
   "dn34:2.1.178": "Just as a kaṇikāra flower is yellow, yellow colored, yellow in characteristics, yellow in shine; or just as fabric from Varanasi that is polished on both sides is yellow, yellow colored, yellow in characteristics, yellow in shine—",
   "dn34:2.1.179": "in the same way, one is percipient of the formless as singular internally, and sees external forms as yellow, yellow colored, yellow in characteristics, yellow in shine. And he has this perception—‘Having mastered those, I know and see.’",
-  "dn34:2.1.180": "This is the sixth sphere of mastery."
+  "dn34:2.1.180": "This is the sixth sphere of mastery.",
+  "dn34:2.1.181": "Percipient of the formless as singular internally, one sees external forms as red, red colored, red in characteristics, red in shine."
 }
