Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -631,5 +631,6 @@
   "dn34:2.1.183": "in the same way, one is percipient of the formless as singular internally, and sees external forms as red, red colored, red in characteristics, red in shine. And he has this perception—‘Having mastered those, I know and see.’",
   "dn34:2.1.184": "This is the seventh sphere of mastery.",
   "dn34:2.1.185": "Percipient of the formless as singular internally, one sees external forms as white, white colored, white in characteristics, white in shine.",
-  "dn34:2.1.186": "Just as the morning star is white, white colored, white in characteristics, white in shine; or just as fabric from Varanasi that is polished on both sides is white, white colored, white in characteristics, white in shine—"
+  "dn34:2.1.186": "Just as the morning star is white, white colored, white in characteristics, white in shine; or just as fabric from Varanasi that is polished on both sides is white, white colored, white in characteristics, white in shine—",
+  "dn34:2.1.187": "in the same way, one is percipient of the formless as singular internally, and sees external forms as white, white colored, white in characteristics, white in shine. And he has this perception—‘Having mastered those, I know and see.’"
 }
