Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -635,5 +635,6 @@
   "dn34:2.1.187": "in the same way, one is percipient of the formless as singular internally, and sees external forms as white, white colored, white in characteristics, white in shine. And he has this perception—‘Having mastered those, I know and see.’",
   "dn34:2.1.188": "This is the eigth sphere of mastery.",
   "dn34:2.1.189": "These are the eight things that are to be understood fully.",
-  "dn34:2.1.190": "What are the eight things that are to be seen for oneself?"
+  "dn34:2.1.190": "What are the eight things that are to be seen for oneself?",
+  "dn34:2.1.191": "The eight liberations—"
 }
