Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -638,5 +638,6 @@
   "dn34:2.1.190": "What are the eight things that are to be seen for oneself?",
   "dn34:2.1.191": "The eight liberations—",
   "dn34:2.1.192": "One sees forms as having form.",
-  "dn34:2.1.193": "This is the first liberation."
+  "dn34:2.1.193": "This is the first liberation.",
+  "dn34:2.1.194": "Percipient of the formless as singular internally, one sees external forms."
 }
