Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -606,7 +606,7 @@
   "dn34:2.1.158": "This teaching is for the uncomplicated, not for one who loves complication. These are the eight things that are to be encouraged.",
   "dn34:2.1.159": "What are the eight things that are to be understood fully?",
   "dn34:2.1.160": "The eight spheres of mastery—",
-  "dn34:2.1.161": "Percipient of form as singular internally, one sees both beautiful and ugly external forms as insignificant. And he has this perception—(XXXIS THIS A CORRECT TRANSLATION OF THE BAHUBHIHI \"evaṃsaññī\" AS \"has\"? AND CAN I TRANSLATE \"evaṃ\" as \"and ... this\"?XXX)(XXXIS IT POSSIBLE THAT THE \"eko\" HERE IS \"someone\" AND NOT \"singular\" MORE ACURATELY TRANSLATING: \"Someone percipient of form internally sees both .... as insignificant.\"?XXX)[XXXSEE BELOW: 2.1.194\nAjjhattaṁ arūpasaññī eko bahiddhā rūpāni passati.XXX]",
+  "dn34:2.1.161": "Percipient of form as singular internally, one sees both beautiful and ugly external forms as insignificant. And he has this perception—(XXXIS THIS A CORRECT TRANSLATION OF THE BAHUBHIHI \"evaṃsaññī\" AS \"has\"? AND CAN I TRANSLATE \"evaṃ\" as \"and ... this\"?XXX)(XXXIS IT POSSIBLE THAT THE \"eko\" HERE IS \"someone\" AND NOT \"singular\" MORE ACURATELY TRANSLATING: \"Someone percipient of form internally sees both .... as insignificant.\"?XXX)[XXXSEE BELOW: 2.1.194\nAjjhattaṁ arūpasaññī eko bahiddhā rūpāni passati.XXX](XXXARE ALL \"-in\" NOUNS BAHUBHIHI BY THEMSELVES?XXX)",
   "dn34:2.1.162": "‘Having mastered those, I know and see.’",
   "dn34:2.1.163": "This is the first sphere of mastery.",
   "dn34:2.1.164": "Percipient of form as singular internally, one sees both beautiful and ugly external forms as boundless. And he has this perception—",
