Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -639,5 +639,6 @@
   "dn34:2.1.191": "The eight liberations—",
   "dn34:2.1.192": "One sees forms as having form.",
   "dn34:2.1.193": "This is the first liberation.",
-  "dn34:2.1.194": "Percipient of the formless as singular internally, one sees external forms. (XXXHOW DO WE TAKE \"eko\" HERE?XXX)"
+  "dn34:2.1.194": "Percipient of the formless as singular internally, one sees external forms. (XXXHOW DO WE TAKE \"eko\" HERE?XXX)",
+  "dn34:2.1.196": "One is intent only on the beautiful. (XXXIS THIS \"subhaṃ + eva"
 }
