Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -643,7 +643,7 @@
   "dn34:2.1.195": "This is the second liberation.",
   "dn34:2.1.196": "One is intent only on the beautiful. (XXXIS THIS \"subhaṃ + eva\" OR, WHAT IS \"subhant\"? CAN YOU JUST ADD AN \"-ant\"/\"-at\"/\"-mant\"/\"-vant\" TO ANY ADJECTIVE TO MAKE IT \"possessing\"?XXX)",
   "dn34:2.1.197": "This is the third liberation.",
-  "dn34:2.1.198": "With the transcendence of perceptions of form altogether, and the cessation of perceptions of aversion, not attending to perceptions of diversity, one attains and dwells in the sphere of infinite space percipient ‘Space is infinite’.",
+  "dn34:2.1.198": "With the transcendence of perceptions of form altogether, and the cessation of perceptions of aversion, not attending to perceptions of diversity, one attains and dwells in the sphere of infinite space, percipient ‘Space is infinite’.",
   "dn34:2.1.199": "This is the fourth liberation.",
   "dn34:2.1.200": "With the transcendence of the sphere of infinite space altogether, one attains and dwells in the sphere of infinite consciousness, percipient ‘Consciousness is infinite’.",
   "dn34:2.1.201": "This is the fifth liberation.",
