Translations by kovilo to translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json

--- a/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
+++ b/translation/en/kovilo/sutta/dn/dn34_translation-en-kovilo.json
@@ -649,5 +649,6 @@
   "dn34:2.1.201": "This is the fifth liberation.",
   "dn34:2.1.202": "With the transcendence of the sphere of infinite consciousness altogether, one attains and dwells in the sphere of no possessions, percipient ‘There is nothing’.",
   "dn34:2.1.203": "This is the sixth liberation.",
-  "dn34:2.1.204": "With the transcendence of the sphere of no possessions altogether, one attains and dwells in the sphere of neither perception nor non perception."
+  "dn34:2.1.204": "With the transcendence of the sphere of no possessions altogether, one attains and dwells in the sphere of neither perception nor non perception.",
+  "dn34:2.1.205": "This is the seventh liberation."
 }
